--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
     body {
       overflow: hidden;
       background: #000000;
+      color: white;
       margin: 0px;
     }
     #canvas {
@@ -18,6 +19,12 @@
   </style>
 </head>
 <body>
-  <canvas id="canvas" class="canvas" ></canvas>
+  <noscript>
+    <style type="text/css">.app { display: none; } p { padding: 0 8px; }</style>
+    <p>このソフトを利用する際は、JavaScriptを有効にするか、JavaScriptをサポートしているブラウザに切り替えてください。</p>
+  </noscript>
+  <div class="app">
+    <canvas id="canvas" class="canvas" ></canvas>
+  </div>
 </body>
 </html>
