--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="./assets/favicon.5b29c647.ico" />
+    <link rel="icon" href="favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Fractal Visualizer for Web</title>
     <meta property="description" content="フラクタル図形などを使い、様々な図形を描画するツール" />
@@ -20,8 +20,6 @@
     <meta name="twitter:image" content="https://niccari.net/fv/ogp.png" />
     <meta name="twitter:description" content="フラクタル図形などを使い、様々な図形を描画するツール" />
     <meta name="twitter:site" content="niccari1" />
-    <script type="module" crossorigin src="./assets/index.91ee649f.js"></script>
-    <link rel="stylesheet" href="./assets/index.595de596.css">
   </head>
 <body>
   <noscript>
@@ -31,6 +29,6 @@
   <div class="app">
     <canvas id="canvas" class="canvas"></canvas>
   </div>
-  
+  <script type="module" src="/src/index.ts"></script>
 </body>
 </html>
